<resources>
    <string name="app_name">Rivet Radio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="next_all_caps">NEXT</string>
    <string name="welcome">Welcome to Rivet Radio</string>
    <string name="title_activity_login_options">LoginOptionsActivity</string>
    <string name="login">Log In</string>
    <string name="twitterActivity">Twitter Activity</string>
    <string name="login_single">Login</string>
    <string name="login_caps">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="news_string_rivet">Rivet News Radio</string>
    <string name="exist_email_id">This Email id or Username is already exists in Rivet, To merge your account please enter existing account password.</string>
    <string name="sign_up_caps">SIGNUP</string>
    <string name="app_id">319130028232775</string>
    <string name="login_with_fb">Log In with Facebook</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="stay_ahead">Stay ahead of the news!</string>
    <string name="login_reason">Log in or sign up for a Rivet Radio account to stay
    informed and keep track of your personal preferences.</string>
    <string name="forgot_pass_question_caps">FORGOT PASSWORD?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit_caps">SUBMIT</string>
    <string name="terms_caps">TERMS</string>
    <string name="radio_for_you">Radio built for you!</string>
    <string name="app_info">Rivet Radio connects you to your world. Build your own portable
    , customized news radio station and listen to what you want to hear when you want and how you
    want to.</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="skip_caps">SKIP</string>
    <string name="customization">Customization</string>
    <string name="account_settings">Account Settings</string>
    <string name="title_activity_one_time_select_category">OneTimeSelectCategoryActivity</string>
    <string name="build_radio">Build your custom radio</string>
    <string name="select_categories_of_interest">Select the categories you\'re interested in.</string>
    <string name="top_news">Top News</string>
    <string name="technology">Technology</string>
    <string name="govt_and_politics">Government &amp; \nPolitics</string>
    <string name="science">Science</string>
    <string name="business">Business</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="sports">Sports</string>
    <string name="crime_and_courts">Crime &amp; Courts</string>
    <string name="arts_and_ent">Arts &amp;\nEntertainment</string>
    <string name="music">Music</string>
    <string name="login_content">login_content</string>
    <string name="categories">categories</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="content">content</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="tutorial">Tutorial</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_faq">FAQActivity</string>
    <string name="title_activity_general">GeneralActivity</string>
    <string name="general">General</string>
    <string name="general_string_one">Where does H2 Radio get its news?</string>
    <string name="general_string_one_answer">H2 Radio features stories from many sources, including original content written and produced by the H2 Radio team, stories written by our partners and adapted for audio by H2 Radio, and stories written and produced by our partners. H2 Radio supplements its news with podcasts from the iTunes Affiliate Program and other sources.</string>
    <string name="general_string_two">Why are stories colored differently?</string>
    <string name="genral_string_two_answer">The stories are color-coded to make them easy to identify by category, and to let you know what’s coming up next. Here’s a quick reference to the visual way in which categories are identified on H2 Radio:
Breaking News is red
Top News is dark blue
Government and Politics is green
Business is blue
Sports is orange
Arts and Entertainment is magenta
Technology is light green
Science is aqua
Lifestyle is yellow
Out of the Box is purple </string>
    <string name="general_string_three">What stories are listed in Next Up?</string>
    <string name="genral_string_three_answer">Next Up lists the story that will be played next. At any time, you see the preview on the next story. Think of Next Up as your own personalized constantly updated playlist, customized to your preferences and interests. When you select categories and add your interests, and as you like/dislike the content that plays, H2 Radio serves up an experience tailored to your world. 

You can add stories to Next Up by tapping items under New and Popular or Related Stories. 

You can also add stories to Next Up by using the Search feature to find and select a specific topic. Contrary to the regular web experience, stories you add are queued up for play and do not interrupt the current story. Reorder Next Up stories by dragging them higher or lower in the list, using the handle icons at the right.</string>
    <string name="general_string_four">What are the stories listed in New and Popular?</string>
    <string name="genral_string_four_answer">These are the newest stories we’ve published; the stories listeners like, search for and add it to their Next Up list. No worries about repetition -- our New and Popular list won’t include any stories you’ve already listened to.</string>
    <string name="general_string_five">What is Out of the Box?</string>
    <string name="general_string_five_answer">Out of the Box includes news stories and podcasts that we think you’ll find interesting, but whose content doesn’t fall under more traditional categories like Politics or World/National News. Out of the Box content includes Commentary, Human Interest, Humor, Talk, Kids and Family, Weird News, and How-To stories.</string>
    <string name="general_string_six">What does Search do?</string>
    <string name="general_string_six_answer">Search lets you find specific content in H2 Radio. Maybe it’s a story, a topic, or a reporter whose work you enjoy. Your searches will push those preferences up on your Next Up list so you can hear them immediately.</string>
    <string name="general_string_seven">What does ‘H2’ mean?</string>
    <string name="general_string_seven_answer">H2 Radio is the product of HearHere Radio, LLC. The H’s in H2 refer to the H’s in the company name. More specifically, it’s a way of hearing news and stories about your specific location when you want to hear them. It’s all about you – where you are, and the news you want to hear. You have total control.</string>
    <string name="social_media">Social Media</string>
    <string name="contact_hearhere_radio">Contact HearHere Radio</string>
    <string name="title_activity_qand_a">QAndAActivity</string>
    <string name="q_and_a">Q &amp; A</string>
    <string name="back">Back</string>
    <string name="bosch_connection_lost">Internet Connection Lost</string>
    <string name="bosch_internet_connection">The Rivet Radio application requires an Internet Connection</string>
    <string name="enter_email">Enter Email</string>
    <string name="check_your_email_">Check your email!</string>
    <string name="sent_email_reset">We’ve sent you an email with instructions on how to reset your password.</string>
    <string name="ok">Ok</string>
    <string name="enter_password">Enter Password</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="twitter">Twitter</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
</resources>