<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.rivet.app.ForgotPasswordActivity" >

    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#DFDFDF" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/forgot_password"
            android:textColor="#454545"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toEndOf="@+id/iv_back"
            android:layout_toRightOf="@+id/iv_back"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:text="@string/back"
            android:textColor="#454545" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rl_top_bar"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="#ffffff"
        android:hint="@string/enter_email"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textColor="@android:color/black" />

    <ImageView
        android:contentDescription="@string/content"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_email"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#DFDFDF" />

    <TextView
        android:id="@+id/checkTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rl_top_bar"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/check_your_email_"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <TextView
        android:id="@+id/sentEmailTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkTV"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/sent_email_reset"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#DFDFDF"
        android:text="@string/submit_caps"
        android:textColor="#454545"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#DFDFDF"
        android:text="@string/ok"
        android:textColor="#454545"
        android:textSize="20sp"
        android:visibility="gone" />

</RelativeLayout>