<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#DFDFDF" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content"
            android:paddingLeft="5dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/sign_up"
            android:textColor="#454545"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/iv_back"
            android:background="@android:color/transparent"
            android:gravity="left|center_vertical"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            android:text="@string/back"
            android:textColor="#454545" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/email_address"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/bordor1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#DFDFDF" />

    <EditText
        android:id="@+id/et_userPas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/bordor2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#DFDFDF"
        android:contentDescription="@string/content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/iv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/arrow_right" />

        <TextView
            android:id="@+id/tv_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="6dp"
            android:layout_toLeftOf="@+id/iv_forgot_password"
            android:text="@string/terms_caps"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:background="#DFDFDF"
            android:text="@string/sign_up_caps"
            android:textColor="#454545"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>