<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.rivet.app.SignInActivity" >

    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#DFDFDF" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content"
            android:paddingLeft="5dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login_single"
            android:textColor="#454545"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/iv_back"
            android:background="@android:color/transparent"
            android:gravity="left|center_vertical"
            android:paddingLeft="3dp"
            android:text="@string/back"
            android:textColor="#454545" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_user_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rl_top_bar"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"    
        android:hint="@string/enter_email"
        android:background="#00000000"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/bordor1"
       android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_user_id"
        android:background="#DFDFDF"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_user_id"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:background="#00000000"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textColor="@android:color/black" />
    <ImageView
        android:id="@+id/bordor2"
       android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_password"
        android:background="#DFDFDF"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Button
        android:id="@+id/bt_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#DFDFDF"
        android:text="@string/login_caps"
        android:textColor="#454545"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/iv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_password"
        android:layout_alignRight="@+id/et_password"
        android:layout_below="@+id/et_password"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/arrow_right" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginRight="5dp"
        android:layout_marginTop="6dp"
        android:layout_toLeftOf="@+id/iv_forgot_password"
        android:text="@string/forgot_pass_question_caps"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

</RelativeLayout>