<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TextView
            android:id="@+id/internetConnectionLost"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="#DFDFDF"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/bosch_connection_lost"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/bosch_internet_connection"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/black"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="20sp" >
        </Button>
    </RelativeLayout>

</RelativeLayout>